# vc-runtime

./: .gitignore  Cargo.toml  LICENSE  README.md  context.md
crates/: context.md
crates/vc-audio/: Cargo.toml  context.md
crates/vc-bench/: Cargo.toml  context.md
crates/vc-bench/schemas/: benchmark-report-v1.md  context.md
crates/vc-bench/src/: context.md  lib.rs  main.rs
crates/vc-cli/: Cargo.toml  context.md
crates/vc-cli/src/: context.md  lib.rs  main.rs
crates/vc-core/: Cargo.toml  context.md
docs/: context.md  glossary.md  mvp-scope.md  phase-0-research-plan.md  runtime-idea.md  vision.md
docs/adr/: 0001-record-architecture-decisions-with-madr.md  0002-use-rust-for-realtime-runtime.md  0003-use-cpal-for-phase-0-audio.md  0004-use-onnx-runtime-as-mainline-inference.md  0005-use-daemon-first-architecture.md  0006-separate-agent-docs-and-human-html-docs.md  0007-require-context-md-in-project-folders.md  0008-use-markdown-only-project-documentation.md  0009-rename-agent-docs-to-memory.md  0010-store-phase-plans-under-memory-phases.md  0011-define-phase-0-audio-metrics-schema.md  0012-build-phase-0-passthrough-with-cpal-rtrb.md  0013-treat-architecture-memory-docs-as-normative-guidance.md  context.md  template.md
docs/agent/: architecture.md  context.md  project-governance.md  runtime-idea.md  vision.md
docs/human/: architecture.html  context.md  glossary.html  index.html  phase-0.html
docs/memory/: architecture-guide.md  architecture.md  context.md  full-design-draft.md  main-pc-handoff.md  mvp-scope.md  phase-0-research-plan.md  roadmap.md  runtime-architecture-v1.md
docs/rfc/: context.md
experiments/: context.md
experiments/audio-soak-metrics/: README.md  context.md  run_audio_soak.sh  (+2 more)
experiments/offline-audio-bench/: .gitignore  Cargo.toml  README.md  context.md
experiments/offline-audio-bench/fixtures/: context.md
experiments/offline-audio-bench/fixtures/audio/: context.md
experiments/offline-audio-bench/fixtures/sources/: context.md  wizard-of-oz-01.json
experiments/offline-audio-bench/schemas/: benchmark-report-v1.md  context.md
experiments/offline-audio-bench/scripts/: context.md  fetch_wizard_of_oz_fixture.sh
experiments/offline-audio-bench/src/: context.md  lib.rs  main.rs
tools/: context.md
(+32 files in other folders)
