[workspace]
members = [
    "crates/vc-audio",
    "crates/vc-cli",
    "crates/vc-core",
]
resolver = "3"

[workspace.package]
edition = "2024"
license = "MIT"
repository = "https://github.com/trantoy/vc-runtime"
rust-version = "1.96"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.39", features = ["derive"] }
cpal = "0.16.0"
rtrb = "0.3.2"
thiserror = "2.0.12"
