[package]
name = "vc-cli"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "vc"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
vc-audio = { path = "../vc-audio" }
vc-core = { path = "../vc-core" }

[lints]
workspace = true
