[package]
name = "offline-audio-bench"
version = "0.1.0"
edition = "2024"
publish = false

[workspace]

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.39", features = ["derive"] }
hound = "3.5.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"

[dev-dependencies]
tempfile = "3.23.0"
